--- a/chrome-extension/popup-sign-out.html
+++ b/chrome-extension/popup-sign-out.html
@@ -44,7 +44,10 @@
 </head>
 
 <body>
+    
     <div>
+        <h1>Ready to Add Words</h1>
+        <br><br>
         <button type="submit">Sign Out</button>
     </div>
     <script src="./popup-sign-out-script.js"></script>
