--- a/chrome-extension/popup-register.html
+++ b/chrome-extension/popup-register.html
@@ -63,12 +63,12 @@
 </head>
 
 <body>
-    <form>
+    <form id="container">
         <input type="first_name" name="first_name" id="first_name" placeholder="First Name">
         <input type="last_name" name="last_name" id="last_name" placeholder="Last Name">
         <input type="email" name="email" id="email" placeholder="Email">
         <input type="password" name="password" id="password" placeholder="Password">
-        <button type="submit" id="register_button">Sign Up</button>
+        <button class="register_button">Sign Up</button>
     </form>
     <script src="./popup-register.js"></script>
 </body>
